--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   background-image: url("https://cdn.alboompro.com/630e19fcf935a50001279613_65284dd7331d870001dbf5f7/original_size/background.jpg?v=1");
   color: #FFFFFF;
 
+  font-family: 'Saira', sans-serif;
+
   margin: 0px;
 
   font-synthesis: none;
