--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   line-height: 1.5;
 
   background-image: url("https://cdn.alboompro.com/630e19fcf935a50001279613_65284dd7331d870001dbf5f7/original_size/background.jpg?v=1");
+  background-repeat: no-repeat;
   color: #FFFFFF;
 
   font-family: 'Saira', sans-serif;
