featuring new styles for center winner name

--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@
 #winner {
   font-size: 88px;
   font-weight: 600;
-  /* margin-top: 98px; */
-  /* margin-bottom: 68px; */
+  margin-top: 78px;
+  margin-bottom: 68px;
   color: #00D6BA;
-  padding: 98px 0 68px 0;
+  /* padding: 98px 0 68px 0; */
 }
 
 #button {
