--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100vh;
   background: url("https://cdn.alboompro.com/62e956f3d4cc770001d255b9_64d3d94a416ce70001599026/original_size/background-2.jpg?v=1");
@@ -24,7 +23,7 @@
 
 #logo {
   width: 180px;
-
+  margin-top: 170px;
 }
 
 #winner {
@@ -62,6 +61,12 @@
   top: 12vh;
 }
 
+#upload-phrase {
+  color: #F4F1F4;
+  text-align: center;
+  font-size: 42px;
+  font-weight: 500;
+  text-transform: uppercase;
 
-
-
+  margin: 200px 0 92px;
+}
