--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 
-*, body, html {
+*,
+body,
+html {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
@@ -81,7 +83,10 @@
 }
 
 #confetti {
-  position: absolute;
-  height: 100vh;
-  left: 72px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
 }
