--- a/style.css
+++ b/style.css
@@ -36,12 +36,25 @@ html {
   align-items: center;
   text-align: center;
   position: relative;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 92px;
+}
+
+#registration {
+  font-size: 22px;
+  color: #F4F1F4;
+  text-transform: uppercase;
+  letter-spacing: 4px;
 }
 
 #winner {
   font-size: 88px;
   font-weight: 600;
   color: #00D6BA;
+  line-height: 110px;
+  margin-bottom: 16px;
+  /* text-transform: capitalize; */
 }
 
 #button {
@@ -51,7 +64,7 @@ html {
   background: #EB077A;
   box-shadow: 6px 5px 0px 0px #00D6BA;
 
-  font-size: 18px;
+  font-size: 20px;
   color: #FFF;
   text-transform: uppercase;
 
@@ -64,9 +77,9 @@ html {
 
 #paragraph {
   padding: 12px;
-  font-size: 14px;
+  font-size: 20px;
   color: rgba(244, 241, 244, 0.80);
-  height: 100%;
+  height: 22%;
   display: flex;
   align-items: end;
   margin-bottom: 12px;
